# beenet

./: .flake8  .gitignore  .golangci.yml  .pre-commit-config.yaml  An Analysis of Ed25519 Test Failures and.sty.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  NOTICE  README.md  build.bat  build.ps1  go.mod  go.sum  golden_test.go  pyproject.toml  test.txt  test_enhanced.txt  testfail.md
.augment/rules/: TDD.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.kilocode/rules/memory-bank/: architecture.md  brief.md  context.md  product.md  tech.md
Docs/: api-reference.md  beenet_spec.md  normative_appendices.md  phase.md  phase1_dev_diary.md  phase2-transport-security.md  phase2_dev_diary.md  spec_map.md
bee-api/: Cargo.toml  openapi.yaml
bee-api/src/: admin.rs  error.rs  lib.rs  message.rs  registry.rs  server.rs  state.rs
bee-api/tests/: test_admin_endpoints.rs  test_contract_blackbox.rs  test_message_lifecycle.proptest-regressions  test_message_lifecycle.rs  test_name_resolution.rs  test_part97_compliance.proptest-regressions  test_part97_compliance.rs
bee-api/tests/common/: mod.rs
bee-cli/: Cargo.toml
bee-core/: Cargo.toml
bee-core/src/: callsign.rs  clock.rs  envelope.rs  identity.rs  lib.rs  name.rs  tests.rs
bee-core/tests/: fuzz_envelope.rs  static_analysis.rs  test_beename_validation.rs  test_envelope_roundtrip.rs  test_golden_vectors.rs  test_nodeid_stability.rs  test_signature_verification.rs
bee-dht/: Cargo.toml
bee-route/: Cargo.toml
bee-sim/: Cargo.toml
bee-sim/src/: lib.rs  link.rs  network.rs  tests.rs  topology.rs
bee-transport/: Cargo.toml
beenet/: __init__.py  observability.py
beenet/core/: __init__.py  connection.py  errors.py  events.py  peer.py  resilience.py
beenet/crypto/: __init__.py  identity.py  keys.py  keystore.py  noise_wrapper.py
beenet/discovery/: __init__.py  beequiet.py  kademlia.py  nat_traversal.py
beenet/transfer/: __init__.py  chunker.py  enhanced_merkle.py  error_correction.py  merkle.py  stream.py
cmd/bee/: main.go
cmd/beenet/: main.go
coverage/: coverage.html
docs/: api.md  conf.py  index.md  index.rst  usage.md
internal/dht/: bootstrap.go  bucket.go  dht.go  integration_test.go  node.go  presence.go  rate_limiter.go  records.go  routing_table.go
pkg/agent/: agent.go  agent_test.go  integration_test.go  network_adapter.go  supervisor.go
pkg/codec/cborcanon/: canonical.go  canonical_test.go
pkg/constants/: defaults.go
pkg/content/: chunker.go  chunker_test.go  cid.go  cid_test.go  errors.go  errors_test.go  fetcher.go  fetcher_test.go  integration_test.go  integrity.go  integrity_test.go  manifest.go  manifest_test.go  performance_test.go  provider.go  provider_test.go  types.go  types_test.go
pkg/control/: api.go  api_test.go
pkg/gossip/: gossip.go  gossip_test.go
pkg/honeytag/: cache.go  crdt.go  honeytag_test.go  records.go  resolver.go  service.go
pkg/identity/: identity.go  identity_test.go
pkg/integration/: transport_security_test.go
pkg/security/noiseik/: admission.go  admission_test.go  negative_test.go  protocol.go  protocol_test.go  replay.go  replay_test.go
pkg/swim/: member.go  member_test.go  swim.go  swim_test.go
pkg/test/: phase4_test.go
pkg/transport/: transport.go  transport_test.go
pkg/transport/quic/: quic.go  quic_test.go
pkg/transport/tcp/: tcp.go  tcp_test.go
pkg/wire/: errors.go  frame.go  frame_test.go  swim_gossip_test.go
scripts/: beenet_demo.py
tests/: __init__.py  conftest.py
tests/fuzz/: __init__.py  test_aead_payload.py  test_beequiet_parser.py  test_merkle_verifier.py  test_noise_decoder.py
tests/integration/: test_peer_integration.py
tests/property/: test_merkle_properties.py
tests/type_safety/: __init__.py  test_mypy_compliance.py
tests/unit/core/: test_events.py
tests/unit/crypto/: test_identity.py  test_keystore.py
tests/unit/discovery/: test_beequiet.py  test_kademlia.py
tests/unit/transfer/: test_chunker.py  test_merkle.py  test_stream.py
