[workspace]
members = [
    "bee-core",
    "bee-sim",
    "bee-dht",
    "bee-route",
    "bee-transport",
    "bee-api",
    "bee-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Beenet Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Core dependencies
sha2 = "0.10"
ed25519-dalek = "2.1"
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Testing
proptest = "1.4"
arbitrary = { version = "1.3", features = ["derive"] }
tokio-test = "0.4"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.test]
opt-level = 2
