[package]
name = "bee-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bee-core = { path = "../bee-core" }
bee-dht = { path = "../bee-dht" }
bee-route = { path = "../bee-route" }
bee-transport = { path = "../bee-transport" }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
warp = "0.3"
hex = "0.4"
base64 = "0.22"

[dev-dependencies]
tokio-test = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
proptest = "1.0"
ed25519-dalek = "2.2"