[package]
name = "bee-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
arbitrary = { workspace = true }
tokio-test = { workspace = true }