[package]
name = "bee-dht"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bee-core = { path = "../bee-core" }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
arbitrary = { workspace = true }