[package]
name = "bee-sim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bee-core = { path = "../bee-core" }
rand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
ed25519-dalek = { workspace = true }